@@ -82,7 +82,7 @@ require so_basename
 
 if OCI8::VERSION != '@@OCI8_MODULE_VERSION@@'
   require 'rbconfig'
-  so_name = so_basename + "." + Config::CONFIG['DLEXT']
+  so_name = so_basename + "." + RbConfig::CONFIG['DLEXT']
   raise "VERSION MISMATCH! #{so_name} version is #{OCI8::VERSION}, but oci8.rb version is @@OCI8_MODULE_VERSION@@."
 end
 
